Update configurations and scripts: added sync.lock to .gitignore, changed icon theme in settings, improved git branch parsing in .bashrc, and added new keybinds in ghostty config.

--- a/cursor/settings.json
+++ b/cursor/settings.json
@@ -218,7 +218,7 @@
   "editor.multiCursorLimit": 100000,
   "git.replaceTagsWhenPull": true,
   "chat.editing.alwaysSaveWithGeneratedChanges": true,
-  "workbench.iconTheme": "catppuccin-latte",
+  "workbench.iconTheme": "catppuccin-frappe",
   "editor.fontVariations": true,
   "symbols.hidesExplorerArrows": false,
   "cursor.cpp.disabledLanguages": [
