--- a/home-symlink/.config/ghostty/config
+++ b/home-symlink/.config/ghostty/config
@@ -24,3 +24,8 @@ mouse-hide-while-typing = "true"
 # Key bindings
 keybind = "super+r=reload_config"
 keybind = shift+enter=text:\n
+keybind = "super+i=prompt_surface_title"
+
+
+# Use prerelease builds
+auto-update-channel = tip
