--- a/home-symlink/.config/ghostty/config
+++ b/home-symlink/.config/ghostty/config
@@ -1,7 +1,7 @@
 # Visual elements
 font-family = "Iosevka Medium"
 font-size = "13"
-theme = "light:catppuccin-latte,dark:catppuccin-frappe"
+theme = "light:catppuccin-latte.conf,dark:catppuccin-frappe.conf"
 bold-is-bright = "false"
 adjust-cell-height = "10%"
 cursor-style = "block"
