--- a/cursor/settings.json
+++ b/cursor/settings.json
@@ -124,6 +124,7 @@
   "terminal.integrated.lineHeight": 1.1,
   "terminal.integrated.scrollback": 100000,
   "terminal.integrated.shellIntegration.enabled": true,
+  "terminal.integrated.tabs.enabled": false,
   "timeline.pageOnScroll": true,
   "todo-tree.general.tags": [
     "BUG",
@@ -218,7 +219,7 @@
   "editor.multiCursorLimit": 100000,
   "git.replaceTagsWhenPull": true,
   "chat.editing.alwaysSaveWithGeneratedChanges": true,
-  "workbench.iconTheme": "catppuccin-frappe",
+  "workbench.iconTheme": "catppuccin-latte",
   "editor.fontVariations": true,
   "symbols.hidesExplorerArrows": false,
   "cursor.cpp.disabledLanguages": [
@@ -228,14 +229,7 @@
   "python.experiments.enabled": false,
   "git.ignoreMissingGitWarning": true,
   "cursor.composer.shouldAllowCustomModes": true,
-  "python.defaultInterpreterPath": "/Users/lucas/Code/oe-eval-internal/.venv",
-  "update.releaseTrack": "prerelease",
   "cursorpyright.analysis.autoImportCompletions": true,
   "cursorpyright.analysis.typeCheckingMode": "basic",
-  "sync.autoDownload": true,
-  "sync.autoUpload": true,
-  "sync.quietSync": false,
-  "sync.gist": "77e8267262377201775be4790a1bebcb",
-  "window.newWindowProfile": "Default",
-  "local-sync.autorestore": true
+  "editor.unicodeHighlight.invisibleCharacters": false
 }
