--- a/home-symlink/.tmux.conf
+++ b/home-symlink/.tmux.conf
@@ -1,105 +1,53 @@
-# Enable mouse support
-set -g mouse on
+# Dynamic hostname-based color theme: primary = random per-host, secondary = black
 
-# Add truecolor support
-# (recommendation from: https://github.com/rakr/vim-one)
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+# Reload config with Prefix (Ctrl+b) then Ctrl+r
+bind-key r source-file ~/.tmux.conf \; display-message "tmux config reloaded"
 
-# Set the default terminal mode to 256 colors mode
-set -g default-terminal "screen-256color"
+run-shell '
+  # ANSI color indices to choose from (avoid hard-to-see ones)
+  colors="1 2 3 4 5 6 9 10 11 12 13 14"
 
-# rebind keys so not to ask confirmation, which can be annoying
-bind-key & kill-window
-bind-key X kill-pane
+  set -- $colors
 
-bind '\' split-window -h # Split panes horizontally
-bind '-' split-window -v # Split panes vertically
+  # Hash hostname to an integer
+  sum=$(hostname | cksum | cut -d" " -f1)
 
-set -g focus-events on
+  # Map hash into [1..$#] and pick that color index
+  i=$((sum % $# + 1))
+  eval "idx=\${$i}"
 
-# https://gist.github.com/admackin/4507371
-# fix ssh agent when tmux is detached
-# See .ssh/rc for socket linking
-set -g update-environment -r
-setenv -g SSH_AUTH_SOCK "$HOME/.ssh/ssh_auth_sock.$HOSTNAME"
+  primary="colour${idx}"
+  secondary="black"
 
-# use CTRL-\ to send prefix to double nested tmux window; CTRL-^ to triple nested tmux
-bind-key -n 'C-\' send-prefix
-bind-key -n C-^ send-prefix \; send-prefix
+  ##### Status bar #####
 
-# resize using meta+arrows
-bind-key -r M-Up resize-pane -U 5
-bind-key -r M-Down resize-pane -D 5
-bind-key -r M-Left resize-pane -L 8
-bind-key -r M-Right resize-pane -R 8
+  # Overall status bar style
+  tmux set-option -g status-style "bg=$primary,fg=$secondary"
 
-# move windows using shit left/right
-bind -n S-Right next-window
-bind -n S-Left previous-window
+  # Left side: prefix indicator dot
+  # Inactive: black; Prefix-on: primary
+  tmux set-option -g status-left "#[bg=default,fg=$secondary]#{?client_prefix,#[fg=$primary],#[fg=$secondary]} ⏺ "
 
-# Force a reload of the config file on C-b r
-unbind r
-bind-key r source-file "$HOME/.tmux.conf"
+  # Right side: date/time (primary on black)
+  tmux set-option -g status-right "#[bg=$secondary,fg=default] #(date \"+%a %m/%d %H:%M\")"
 
-# start new panes in folder of current pane
-unbind c; bind c new-window -c "#{pane_current_path}"
+  ##### Windows / tabs #####
 
-# increased number of lines in history
-set-option -g history-limit 10000
+  # Inactive windows: black, Active window: primary
+  tmux set-window-option -g window-status-style "fg=$secondary,bg=default"
+  tmux set-window-option -g window-status-current-style "fg=$primary,bg=default"
 
-# do not interfere with arrow keys
-set-window-option -g xterm-keys on
+  ##### Panes #####
 
-# Use the OS X pasteboard hack if available
-# stolen from https://github.com/ches/dotfiles/blob/master/.tmux.conf
-# reason https://github.com/tmux/tmux/issues/543
-# rembember to install reattach-to-user-namespace
-# brew install reattach-to-user-namespace
-if 'command -v reattach-to-user-namespace >/dev/null' \
-    'set -gq @osx-pasteboard true'
+  # Pane borders: inactive black, active primary
+  tmux set-option -g pane-border-style "fg=$secondary"
+  tmux set-option -g pane-active-border-style "fg=$primary"
 
-if -F '#{@osx-pasteboard}' \
-    'set -g default-command "reattach-to-user-namespace -l $SHELL"'
+  ##### Copy-mode / messages #####
 
-if 'command -v fpp >/dev/null' \
-    'set -gq @has-fpp true'
+  # Selection / copy-mode
+  tmux set-option -g mode-style "bg=$primary,fg=$secondary"
 
-# have tmux setting titles of windows
-set-option -g set-titles on
-set-option -g set-titles-string '#I·#W'
-
-set-option -g pane-border-style fg='magenta'
-# set-option -g status-style fg='color233',bg='color249'
-set-option -g status-style fg='default',bg='default'
-
-# change color if we press meta+B
-# Orangeish
-set -g status-left '#[bg=default]#[fg=default]#{?client_prefix,#[bg=default]#[fg=magenta],} ⏺ #[bg=default]'
-
-set -g status-left-length 20
-set -g status-right-length 100
-
-# Greenish
-set-window-option -g window-status-format " #I·#W"
-set-window-option -g window-status-style fg='default'
-set-window-option -g window-status-current-format " #I·#W"
-set-window-option -g window-status-separator ''
-set-window-option -g window-status-current-style fg='magenta'
-set -g pane-border-style fg='default'
-set -g pane-active-border-style fg='magenta'
-
-set-window-option -g status-right-style fg='default',bg='default'
-# Blueish
-# set-option -g status-right "#[bg=default,fg=green] #h "
-# # Uptime, disable
-# set-option -ag status-right "#[bg=default,fg=yellow]#(uptime | rev | cut -d':' -f1 | rev | cut -d ',' -f 1) "
-# Yellowish
-# set-option -ag status-right "#[bg=default,fg=red] #(mempressure.sh) "
-# Purpleish
-set-option -g status-right "#[bg=default,fg=default] #(date '+%a %m/%d %H:%M') "
-
-# selection
-set -g mode-style bg="teal",fg="white"
-
-# command bar
-set -g message-style bg="teal",fg="white"
+  # Command / message bar
+  tmux set-option -g message-style "bg=$primary,fg=$secondary"
+'
