--- a/home-symlink/.tmux.conf
+++ b/home-symlink/.tmux.conf
@@ -1,53 +1,102 @@
-# Dynamic hostname-based color theme: primary = random per-host, secondary = black
+# Enable mouse support
+set -g mouse on
 
-# Reload config with Prefix (Ctrl+b) then Ctrl+r
-bind-key r source-file ~/.tmux.conf \; display-message "tmux config reloaded"
+# Add truecolor support
+# (recommendation from: https://github.com/rakr/vim-one)
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
-run-shell '
-  # ANSI color indices to choose from (avoid hard-to-see ones)
-  colors="1 2 3 4 5 6 9 10 11 12 13 14"
+# Set the default terminal mode to 256 colors mode
+set -g default-terminal "screen-256color"
 
-  set -- $colors
+# rebind keys so not to ask confirmation, which can be annoying
+bind-key & kill-window
+bind-key X kill-pane
 
-  # Hash hostname to an integer
-  sum=$(hostname | cksum | cut -d" " -f1)
+bind '\' split-window -h # Split panes horizontally
+bind '-' split-window -v # Split panes vertically
 
-  # Map hash into [1..$#] and pick that color index
-  i=$((sum % $# + 1))
-  eval "idx=\${$i}"
+set -g focus-events on
 
-  primary="colour${idx}"
-  secondary="black"
+# https://gist.github.com/admackin/4507371
+# fix ssh agent when tmux is detached
+# See .ssh/rc for socket linking
+set -g update-environment -r
+setenv -g SSH_AUTH_SOCK "$HOME/.ssh/ssh_auth_sock.$HOSTNAME"
 
-  ##### Status bar #####
+# use CTRL-\ to send prefix to double nested tmux window; CTRL-^ to triple nested tmux
+bind-key -n 'C-\' send-prefix
+bind-key -n C-^ send-prefix \; send-prefix
 
-  # Overall status bar style
-  tmux set-option -g status-style "bg=$primary,fg=$secondary"
+# resize using meta+arrows
+bind-key -r M-Up resize-pane -U 5
+bind-key -r M-Down resize-pane -D 5
+bind-key -r M-Left resize-pane -L 8
+bind-key -r M-Right resize-pane -R 8
 
-  # Left side: prefix indicator dot
-  # Inactive: black; Prefix-on: primary
-  tmux set-option -g status-left "#[bg=default,fg=$secondary]#{?client_prefix,#[fg=$primary],#[fg=$secondary]} ⏺ "
+# move windows using shit left/right
+bind -n S-Right next-window
+bind -n S-Left previous-window
 
-  # Right side: date/time (primary on black)
-  tmux set-option -g status-right "#[bg=$secondary,fg=default] #(date \"+%a %m/%d %H:%M\")"
+# Force a reload of the config file on C-b r
+unbind r
+bind-key r source-file "$HOME/.tmux.conf"
 
-  ##### Windows / tabs #####
+# start new panes in folder of current pane
+unbind c; bind c new-window -c "#{pane_current_path}"
 
-  # Inactive windows: black, Active window: primary
-  tmux set-window-option -g window-status-style "fg=$secondary,bg=default"
-  tmux set-window-option -g window-status-current-style "fg=$primary,bg=default"
+# increased number of lines in history
+set-option -g history-limit 10000
 
-  ##### Panes #####
+# do not interfere with arrow keys
+set-window-option -g xterm-keys on
 
-  # Pane borders: inactive black, active primary
-  tmux set-option -g pane-border-style "fg=$secondary"
-  tmux set-option -g pane-active-border-style "fg=$primary"
+# Use the OS X pasteboard hack if available
+# stolen from https://github.com/ches/dotfiles/blob/master/.tmux.conf
+# reason https://github.com/tmux/tmux/issues/543
+# rembember to install reattach-to-user-namespace
+# brew install reattach-to-user-namespace
+if 'command -v reattach-to-user-namespace >/dev/null' \
+    'set -gq @osx-pasteboard true'
 
-  ##### Copy-mode / messages #####
+if -F '#{@osx-pasteboard}' \
+    'set -g default-command "reattach-to-user-namespace -l $SHELL"'
 
-  # Selection / copy-mode
-  tmux set-option -g mode-style "bg=$primary,fg=$secondary"
+if 'command -v fpp >/dev/null' \
+    'set -gq @has-fpp true'
 
-  # Command / message bar
-  tmux set-option -g message-style "bg=$primary,fg=$secondary"
-'
+# have tmux setting titles of windows
+set-option -g set-titles on
+set-option -g set-titles-string '#I·#W'
+
+# Hostname-based dynamic coloring for status bar
+# This picks a color from ANSI colors 2-6, 8-14 (avoiding black/white for readability)
+# The same hostname will always get the same color
+run-shell "tmux setenv -g HOST_COLOR $(hostname | cksum | awk '{n = $1 % 11; print (n < 5 ? n + 2 : n + 3)}')"
+
+# Set status bar with hostname-based background color
+set-option -g status-style fg='black',bg="colour#{HOST_COLOR}"
+
+# Set pane borders to match the hostname color (but slightly dimmer for non-active)
+set-option -g pane-border-style fg='white'
+set -g pane-active-border-style fg="colour#{HOST_COLOR}"
+
+# change color if we press meta+B
+# Orangeish
+set -g status-left '#[fg=white]#{?client_prefix,#[fg=black],} ⏺ #[fg=white]'
+
+set -g status-left-length 20
+set -g status-right-length 100
+
+set-window-option -g window-status-format " #I·#W"
+set-window-option -g window-status-style fg='white'
+set-window-option -g window-status-current-format " #I·#W"
+set-window-option -g window-status-separator ''
+set-window-option -g window-status-current-style fg="black"
+
+set-option -g status-right "#[bg=colour#{HOST_COLOR},fg=white] #(date '+%a %m/%d %H:%M') "
+
+# selection
+set -g mode-style fg="colour${HOST_COLOR},bold",bg="white"
+
+# command bar
+set -g message-style fg="colour${HOST_COLOR},bold",bg="white"
