trying with host

--- a/home-symlink/.tmux.conf
+++ b/home-symlink/.tmux.conf
@@ -71,7 +71,7 @@ set-option -g set-titles-string '#I·#W'
 # Hostname-based dynamic coloring for status bar
 # This picks a color from ANSI colors 2-6, 8-14 (avoiding black/white for readability)
 # The same hostname will always get the same color
-run-shell "tmux setenv -g HOST_COLOR $(hostname | cksum | awk '{n = $1 % 11; print (n < 5 ? n + 2 : n + 3)}')"
+run-shell "tmux setenv -g HOST_COLOR $(printf \"%s\" \"$USER@$HOSTNAME\" | cksum | awk '{n = $1 % 11; print (n < 5 ? n + 2 : n + 3)}')"
 
 # Set status bar with hostname-based background color
 set-option -g status-style fg='black',bg="colour#{HOST_COLOR}"
