--- a/home-symlink/.tmux.conf
+++ b/home-symlink/.tmux.conf
@@ -96,7 +96,7 @@ set-window-option -g window-status-current-style fg="black"
 set-option -g status-right "#[bg=colour#{HOST_COLOR},fg=white] #(date '+%a %m/%d %H:%M') "
 
 # selection
-set -g mode-style fg="colour${HOST_COLOR},bold",bg="white"
+set -g mode-style fg="colour${HOST_COLOR}",bg="white"
 
 # command bar
-set -g message-style fg="colour${HOST_COLOR},bold",bg="white"
+set -g message-style fg="colour${HOST_COLOR}",bg="white"
