--- a/home-symlink/.tmux.conf
+++ b/home-symlink/.tmux.conf
@@ -71,14 +71,20 @@ set-option -g set-titles-string '#I·#W'
 # Hostname-based dynamic coloring for status bar
 # This picks a color from ANSI colors 2-6, 8-14 (avoiding black/white for readability)
 # The same hostname will always get the same color
-run-shell "tmux setenv -g HOST_COLOR $(hostname -A | cksum | awk '{n = $1 % 11; print (n < 5 ? n + 2 : n + 3)}')"
+run-shell "\
+if [ -n \"\$HOST_COLOR_HEX\" ]; then \
+    tmux setenv -g HOST_COLOR_TMUX \$HOST_COLOR_HEX; \
+else \
+    tmux setenv -g HOST_COLOR_TMUX colour$(hostname -A | cksum | awk '{n = \$1 % 11; print (n < 5 ? n + 2 : n + 3)}'); \
+fi\
+"
 
 # Set status bar with hostname-based background color
-set-option -g status-style fg='black',bg="colour#{HOST_COLOR}"
+set-option -g status-style fg='black',bg="#{HOST_COLOR_TMUX}"
 
 # Set pane borders to match the hostname color (but slightly dimmer for non-active)
 set-option -g pane-border-style fg='white'
-set -g pane-active-border-style fg="colour#{HOST_COLOR}"
+set -g pane-active-border-style fg="#{HOST_COLOR_TMUX}"
 
 # change color if we press meta+B
 # Orangeish
@@ -93,10 +99,10 @@ set-window-option -g window-status-current-format " #I·#W"
 set-window-option -g window-status-separator ''
 set-window-option -g window-status-current-style fg="black"
 
-set-option -g status-right "#[bg=colour#{HOST_COLOR},fg=white] #(date '+%a %m/%d %H:%M') "
+set-option -g status-right "#[bg=#{HOST_COLOR_TMUX},fg=white] #(date '+%a %m/%d %H:%M') "
 
 # selection
-set -g mode-style fg="colour${HOST_COLOR}",bg="white"
+set -g mode-style fg="#{HOST_COLOR_TMUX}",bg="white"
 
 # command bar
-set -g message-style fg="colour${HOST_COLOR}",bg="white"
+set -g message-style fg="#{HOST_COLOR_TMUX}",bg="white"
