--- a/cursor/settings.json
+++ b/cursor/settings.json
@@ -83,10 +83,10 @@
   "window.systemColorTheme": "auto",
   "window.title": "${rootName}${separator}${activeEditorMedium}",
   "window.titleSeparator": " · ",
-  "workbench.colorTheme": "Monokai Pro Light (Filter Sun)",
+  "workbench.colorTheme": "Monokai Pro (Filter Spectrum)",
   "workbench.editor.enablePreviewFromCodeNavigation": true,
   "workbench.fontAliasing": "auto",
-  "workbench.iconTheme": "Monokai Pro Light (Filter Sun) Icons",
+  "workbench.iconTheme": "Monokai Pro (Filter Spectrum) Icons",
   "workbench.preferredDarkColorTheme": "Monokai Pro (Filter Spectrum)",
   "workbench.preferredHighContrastColorTheme": "Monokai Pro (Filter Spectrum)",
   "workbench.preferredHighContrastLightColorTheme": "Monokai Pro Light (Filter Sun)",
