--- a/home-symlink/.config/ghostty/config
+++ b/home-symlink/.config/ghostty/config
@@ -2,6 +2,7 @@
 font-family = "Iosevka Medium"
 font-size = "13"
 theme = "light:monokay-pro-light-sun.ghostty,dark:monokay-pro-spectrum.ghostty"
+window-theme = "system"
 bold-is-bright = "false"
 adjust-cell-height = "10%"
 cursor-style = "block"
