--- a/home-symlink/.tmux.conf
+++ b/home-symlink/.tmux.conf
@@ -87,8 +87,7 @@ set-option -g pane-border-style fg='white'
 set -g pane-active-border-style fg="#{HOST_COLOR_TMUX}"
 
 # change color if we press meta+B
-# Orangeish
-set -g status-left ' #S#[fg=white]#{?client_prefix,#[fg=black],} ⏺ #[fg=white]'
+set -g status-left ' #[fg=white]#S#{?client_prefix,#[fg=black],} ⏺ #[fg=white]'
 
 set -g status-left-length 20
 set -g status-right-length 100
