--- a/home-symlink/.config/zed/settings.json
+++ b/home-symlink/.config/zed/settings.json
@@ -27,10 +27,22 @@
       "args": [],
       "projects": [
         {
-          "paths": ["/home/lucas/olmo-bonepick"],
+          "paths": [
+            "/home/lucas/OLMo-core"
+          ]
         },
-      ],
+        {
+          "paths": [
+            "/home/lucas/olmo-bonepick"
+          ]
+        }
+      ]
     },
+    {
+      "host": "spark",
+      "args": [],
+      "projects": []
+    }
   ],
   "title_bar": {
     "show_menus": false,
@@ -54,7 +66,7 @@
     "show": "never",
   },
   "features": {
-    "edit_prediction_provider": "copilot",
+    "edit_prediction_provider": "zed",
   },
   "selection_highlight": true,
   "auto_indent_on_paste": true,
