--- a/home-symlink/.config/zed/settings.json
+++ b/home-symlink/.config/zed/settings.json
@@ -27,22 +27,18 @@
       "args": [],
       "projects": [
         {
-          "paths": [
-            "/home/lucas/OLMo-core"
-          ]
+          "paths": ["/home/lucas/OLMo-core"],
         },
         {
-          "paths": [
-            "/home/lucas/olmo-bonepick"
-          ]
-        }
-      ]
+          "paths": ["/home/lucas/olmo-bonepick"],
+        },
+      ],
     },
     {
       "host": "spark",
       "args": [],
-      "projects": []
-    }
+      "projects": [],
+    },
   ],
   "title_bar": {
     "show_menus": false,
@@ -113,9 +109,9 @@
     "custom": 1.35,
   },
   "theme": {
-    "mode": "system",
+    "mode": "dark",
     "light": "Catppuccin Latte",
-    "dark": "Catppuccin Frappé",
+    "dark": "Monokai Pro (CE)",
   },
   "auto_install_extensions": {
     "html": true,
@@ -130,6 +126,20 @@
   "languages": {
     "Python": {
       "language_servers": ["basedpyright", "ruff"],
+    },
+  },
+  "theme_overrides": {
+    "One Dark": {
+      "editor.background": "#333",
+      "syntax": {
+        "comment": {
+          "font_style": "italic",
+        },
+        "comment.doc": {
+          "font_style": "italic",
+        },
+      },
+      "accents": ["#ff0000", "#ff7f00", "#ffff00", "#00ff00", "#0000ff", "#8b00ff"],
     },
   },
 }
