--- a/home-symlink/.gitconfig
+++ b/home-symlink/.gitconfig
@@ -13,11 +13,11 @@
 
 [credential "https://github.com"]
 	helper =
-	helper = !/opt/homebrew/bin/gh auth git-credential
+	helper = !gh auth git-credential
 
 [credential "https://gist.github.com"]
 	helper =
-	helper = !/opt/homebrew/bin/gh auth git-credential
+	helper = !gh auth git-credential
 
 [pull]
 	rebase = false
