--- a/home-symlink/.config/zed/settings.json
+++ b/home-symlink/.config/zed/settings.json
@@ -7,6 +7,9 @@
 // custom settings, run `zed: open default settings` from the
 // command palette (cmd-shift-p / ctrl-shift-p)
 {
+  "edit_predictions": {
+    "provider": "zed"
+  },
   "relative_line_numbers": "disabled",
   "scrollbar": {
     "axes": {
@@ -43,12 +46,27 @@
         },
         {
           "paths": [
+            "/home/lucas/oe-data-internal"
+          ]
+        },
+        {
+          "paths": [
+            "/home/lucas/olmerheim"
+          ]
+        },
+        {
+          "paths": [
             "/home/lucas/olmo-bonepick"
           ]
         },
         {
           "paths": [
             "/home/lucas/olmo-cookbook"
+          ]
+        },
+        {
+          "paths": [
+            "/home/lucas/vllm"
           ]
         }
       ]
@@ -100,8 +118,8 @@
   "confirm_quit": true,
   "agent": {
     "inline_assistant_model": {
-      "provider": "anthropic",
-      "model": "claude-sonnet-4-5-thinking-latest"
+      "provider": "zed.dev",
+      "model": "claude-opus-4-6"
     },
     "play_sound_when_agent_done": false,
     "default_profile": "write",
@@ -118,9 +136,6 @@
   "multi_cursor_modifier": "cmd_or_ctrl",
   "minimap": {
     "show": "never",
-  },
-  "features": {
-    "edit_prediction_provider": "zed",
   },
   "selection_highlight": true,
   "auto_indent_on_paste": true,
