setting up better sync
Signed-off-by: Luca Soldaini <luca@soldaini.net>

--- a/home-symlink/.config/zed/settings.json
+++ b/home-symlink/.config/zed/settings.json
@@ -66,6 +66,11 @@
         },
         {
           "paths": [
+            "/home/lucas/open-instruct"
+          ]
+        },
+        {
+          "paths": [
             "/home/lucas/raccoon"
           ]
         },
